--- a/feeds/package.json
+++ b/feeds/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.507.0",
     "mongoose": "^8.14.1",
     "next": "15.3.1",
     "react": "^19.0.0",
